# Digital-Image-Processing

./: .gitignore  README.md  conda_setup.sh
CCNet/: .gitignore  README.md  requirements.txt
CCNet/cc_attention/: functions.py
CCNet/datasets/: README.md
CCNet/networks/: ccnet.py  deeplabv3.py  pspnet.py
CCNet/scripts/: download_weights.py  setup_env.sh
CCNet/tools/: run_inference.py
CCNet/utils/: pyt_utils.py
FasterRCNN/: .gitignore  QUICKSTART.md  README.md  download_model.py  install_detectron2.sh  register_custom_dataset.py  requirements.txt  run_inference.py  setup.sh  train_custom.py
bdd100k_dataset/: .gitignore  download_ext_dataset.sh
custom_dataset/: .gitignore  download.sh  sample.py
fog-removal/: dark_channel_prior.py  dcp.py  defog.ipynb  defog_pipeline.py
fog-removal/videos/: extract_frames.sh
low-light/: Low_Light_experiment.ipynb
low-light/LIME_Processing/: .gitignore  CMakeLists.txt  move_py_lib.sh
low-light/LIME_Processing/Python/: lime_wrapper.cpp
low-light/LIME_Processing/test/: LIME.cpp
low-light/Python_LIME/: .gitignore  LIME.py  __init__.py
